# Yocto-AI-Denoising

./: .gitignore  readme.md
apps/: CMakeLists.txt
apps/yimgdenoise/: CMakeLists.txt  yimgdenoise.cpp
apps/ynlmdenoise/: CMakeLists.txt  ynlmdenoise.cpp
apps/yscenetrace/: yscenetrace.cpp
libs/yocto_extension/: yocto_extension.cpp  yocto_extension.h
libs/yocto_pathtrace/: yocto_pathtrace.cpp  yocto_pathtrace.h
scripts/: denoise_test.sh  generate_feature_images.sh  generate_images.sh
tests/02_bedroom/: bedroom.json
tests/03_classroom/: classroom.json
tests/04_kitchen/: kitchen.json
